--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /JavaProject/nbproject/private/
 /JavaProject/build/
 /JavaProject/dist/
+/FlowLayoutExample/nbproject/private/
+/FlowLayoutExample/build/
+/EventFlowLayoutExample/build/
+/EventFlowLayoutExample/nbproject/private/
