--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /FlowLayoutExample/build/
 /EventFlowLayoutExample/build/
 /EventFlowLayoutExample/nbproject/private/
+/Graphics2D/nbproject/private/
+/Graphics2D/build/
