--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /EventFlowLayoutExample/nbproject/private/
 /Graphics2D/nbproject/private/
 /Graphics2D/build/
+/SimpleMVC/nbproject/private/
+/SimpleMVC/build/
