--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Graphics2D/build/
 /SimpleMVC/nbproject/private/
 /SimpleMVC/build/
+/swing components/nbproject/private/
+/swing components/build/
